--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<title>MGardeazabal</title>
 	<meta charset="utf-8">
@@ -59,7 +59,7 @@
 						<div class="nav-box navbar-collapse collapse">
 							<ul class="navigation-menu nav navbar-nav navbar-right navbars">
 								<li class="active"><a href="index.html">Home</a></li>
-								<li><a href="#">Nosotros</a></li>
+								<li><a href="nosotros.html">Nosotros</a></li>
 								<li><a href="#">Servicios</a></li>
                 <li><a href="#">Portafolio</a></li>
                 <li><a href="#">Clientes</a></li>
@@ -140,8 +140,8 @@
         	<div class="container text-center">
             	<div class="row">
             		<div class="col col-md-8 col-md-offset-2 title-col">
-              			<h2 class="section-title">Who We Are<span></span></h2>
-                        <h4>We Are Corporate Web Agency</h4>
+              			<h2 class="section-title">Acerca de nosotros<span></span></h2>
+                        <h4>Somos más que una agencia de comunicación</h4>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 					</div><!--/.col-->
 				</div><!--/.row-->
@@ -149,7 +149,7 @@
                 	<div class="row">
                     	<div class="col col-sm-6 col-md-3 animate" data-animate="fadeInUp">
                         	<div class="feature-col">
-                            	<i class="fa fa-arrows-alt" aria-hidden="true"></i>
+                            	<!-- <i class="fa fa-arrows-alt" aria-hidden="true"></i> -->
                             	<h6>Fully Responsive</h6>
                                 <p>It has survived not only five centuries, but also the leap into electronic typesetting</p>
                             </div><!--/.feature-col-->
