--- a/public/index.html
+++ b/public/index.html
@@ -602,7 +602,20 @@
             </div><!--/.container-->
         </div><!--/#team-section-->
 		<!--MEET OUR TEAM END-->
-		
+
+		 <!--MEET OUR TEAM START-->
+        <div id="instagram-feed" class="section">
+            <div class="container text-center">
+                <div class="row">
+                    <div class="col col-md-8 col-md-offset-2 title-col">
+                        <h2 class="section-title">Nuestros Clientes<span></span></h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div id="instafeed"></div>
+                </div>
+            </div>
+        </div>
 		
 		<!--OUR PARTNERS START-->
         <div id="partners-section" class="section bg-grey">
@@ -641,10 +654,10 @@
         </div><!--/.quick-contact-->
     	<div class="container">
         	<div class="row footer-cols">
-            	<div class="col col-sm-6 col-md-4">
-                	<div class="widget">
-                    	<h4 class="hr-primary">Navigation</h4>
-                        <div class="row">
+            	<!-- <div class="col col-sm-6 col-md-4"> -->
+                	<!-- <div class="widget"> -->
+                    	<!-- <h4 class="hr-primary">Navigation</h4> -->
+                        <!-- <div class="row">
                         	<div class="col col-sm-6 col-md-6">
                             	<ul class="nav-list">
                                 	<li><a href="#">Home</a></li>
@@ -653,20 +666,20 @@
                                     <li><a href="#">Work</a></li>
                                     <li><a href="#">Team</a></li>
                                     <li><a href="#">Blog</a></li>
-                                </ul><!--/.nav-list-->
-                            </div><!--/.col-->
-                            <div class="col col-sm-6 col-md-6">
+                                </ul> --><!--/.nav-list-->
+                            <!-- </div> --><!--/.col-->
+                            <!-- <div class="col col-sm-6 col-md-6">
                             	<ul class="nav-list">
                                 	<li><a href="#">Legal</a></li>
                                     <li><a href="#">Privacy policy</a></li>
                                     <li><a href="#">Terms</a></li>
-                                    <li><a href="#">Contact</a></li>
-                                </ul><!--/.nav-list-->
-                            </div><!--/.col-->
-                        </div><!--/.row-->
-                    </div><!--/.widget-->
-                </div><!--/.col-->
-                <div class="col col-sm-6 col-md-4">
+                                    <li><a href="#">Contact</a></li> -->
+                                <!-- </ul> --><!--/.nav-list-->
+                            <!-- </div> --><!--/.col-->
+                        <!-- </div> --><!--/.row-->
+                    <!-- </div> --><!--/.widget-->
+                <!-- </div> --><!--/.col-->
+                <div class="col col-sm-6">
                 	<div class="widget">
                     	<h4 class="hr-primary">Contact Information</h4>
                         <div class="address-col getintouch">
@@ -683,7 +696,7 @@
                         </div><!--/.getintouch-->
                     </div><!--/.widget-->
                 </div><!--/.col-->
-                <div class="col col-sm-6 col-md-4">
+                <div class="col col-sm-6">
                 	<div class="widget">
                     	<h4 class="hr-primary">Newsletter</h4>
                         <div class="footer-newsletter">
@@ -721,6 +734,7 @@
 <!-- Latest Bootstrap -->
 <script src="js/modernizr.min.js"></script>
 <!-- modernizer JS -->
+<script src="js/instafeed.min.js"></script>
 <script src="js/owl.carousel.min.js"></script>
 <!-- owl-carousel min js  -->
 <script src="js/jquery.matchHeight-min.js"></script>
