--- a/public/index.html
+++ b/public/index.html
@@ -58,13 +58,13 @@
             </button>
             <div class="nav-box navbar-collapse collapse">
               <ul class="navigation-menu nav navbar-nav navbar-right navbars">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="portafolio.html">Portafolio</a></li>
-                <li><a href="#">Clientes</a></li>
-                <li><a href="equipo.html">Equipo</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <!-- <li class="active"><a href="#">Home</a></li> -->
+                <li><a href="#about-section">Nosotros</a></li>
+                <li><a href="#services-header">Servicios</a></li>
+                <li><a href="#work-section">Portafolio</a></li>
+                <li><a href="#testimonials-section">Clientes</a></li>
+                <li><a href="#team-section">Equipo</a></li>
+                <li><a href="#footer">Contacto</a></li>
                 <li><a href="./en"><i class="fa fa-globe" aria-hidden="true"></i> English </a></li>
               </ul><!--/.navigation-menu-->
             </div><!--/.nav-box-->
@@ -74,13 +74,13 @@
             <div class="sidenav-wrapper">
               <a href="#" class="close-menu"></a>
               <ul class="nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="portafolio.html">Portafolio</a></li>
-                <li><a href="#">Clientes</a></li>
-                <li><a href="equipo.html">Equipo</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <!-- <li class="active"><a href="#top">Home</a></li> -->
+                <li><a href="#about-section">Nosotros</a></li>
+                <li><a href="#services-header">Servicios</a></li>
+                <li><a href="#work-section">Portafolio</a></li>
+                <li><a href="#testimonials-section">Clientes</a></li>
+                <li><a href="#team-section">Equipo</a></li>
+                <li><a href="#footer">Contacto</a></li>
               </ul>
               <ul class="social-links">
                 <li class="fb"><a href="#" target="_blank" title="Facebook"><i class="fa fa-facebook"></i></a></li>
@@ -608,7 +608,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col col-md-8 col-md-offset-2 title-col">
-                        <h2 class="section-title">Nuestros Clientes<span></span></h2>
+                        <h2 class="section-title">MG@rdeazabal<span></span></h2>
                     </div>
                 </div>
                 <div class="row">
